--- a/desafio_modulo03/index.html
+++ b/desafio_modulo03/index.html
@@ -108,7 +108,7 @@
         </section>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a><div class=""></div></p>
+        <p>Site criado por <a href="https://github.com/Gabriel-Allgayer" target="_blank">Gabriel Allgayer</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a><div class=""></div></p>
     </footer>
 </body>
 </html>
